[package]
name = "nftmart-auction"
version = "3.0.0"
authors = ["NFTMart Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
sp-core = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'ce3c31f2bfa7e10817a8a0833faddeaee818910d' }
sp-std = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'ce3c31f2bfa7e10817a8a0833faddeaee818910d' }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'ce3c31f2bfa7e10817a8a0833faddeaee818910d' }
frame-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'ce3c31f2bfa7e10817a8a0833faddeaee818910d' }
frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'ce3c31f2bfa7e10817a8a0833faddeaee818910d' }
pallet-proxy = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'ce3c31f2bfa7e10817a8a0833faddeaee818910d' }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'ce3c31f2bfa7e10817a8a0833faddeaee818910d' }
orml-traits = { version = "0.4.1-dev", default-features = false, path = "../orml-traits" }
nftmart-traits = { default-features = false, path = "../nftmart-traits" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'ce3c31f2bfa7e10817a8a0833faddeaee818910d', optional = true }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
sp-io = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'ce3c31f2bfa7e10817a8a0833faddeaee818910d' }
pallet-balances = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'ce3c31f2bfa7e10817a8a0833faddeaee818910d' }
pallet-utility = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = 'ce3c31f2bfa7e10817a8a0833faddeaee818910d' }
orml-currencies = { version = "0.4.1-dev", path = "../orml-currencies" }
orml-tokens = { version = "0.4.1-dev", path = "../orml-tokens" }
orml-nft = { path = "../orml-nft" }
nftmart-config = { path = "../nftmart-config" }
nftmart-nft = { path = "../nftmart-nft" }
paste = "1.0"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-proxy/std",
	"pallet-timestamp/std",
	"nftmart-traits/std",
	"orml-traits/std",
	"frame-benchmarking/std",
	"scale-info/std",
]
runtime-benchmarks = ["frame-benchmarking"]
