[package]
name = "nftmart-config"
version = "3.0.0"
authors = ["NFTMart Developers"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
sp-core = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '88b4fc861129b63b445492e3088d7f12382f0128' }
sp-std = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '88b4fc861129b63b445492e3088d7f12382f0128' }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '88b4fc861129b63b445492e3088d7f12382f0128' }
frame-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '88b4fc861129b63b445492e3088d7f12382f0128' }
frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '88b4fc861129b63b445492e3088d7f12382f0128' }
pallet-proxy = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '88b4fc861129b63b445492e3088d7f12382f0128' }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '88b4fc861129b63b445492e3088d7f12382f0128' }
nftmart-traits = { default-features = false, path = "../nftmart-traits" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
sp-io = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = '88b4fc861129b63b445492e3088d7f12382f0128' }
pallet-balances = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = '88b4fc861129b63b445492e3088d7f12382f0128' }
pallet-utility = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = '88b4fc861129b63b445492e3088d7f12382f0128' }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-proxy/std",
	"pallet-timestamp/std",
	"nftmart-traits/std",
	"scale-info/std",
]
