[package]
name = "nftmart-nft"
version = "3.0.0"
authors = ["NFTMart Developers"]
edition = "2021"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive", "max-encoded-len"] }
sp-core = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/purestake/substrate.git', rev = 'c881b9c86df5d0e4e3607921598768a3ab8ccdc8' }
sp-std = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/purestake/substrate.git', rev = 'c881b9c86df5d0e4e3607921598768a3ab8ccdc8' }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/purestake/substrate.git', rev = 'c881b9c86df5d0e4e3607921598768a3ab8ccdc8' }
frame-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/purestake/substrate.git', rev = 'c881b9c86df5d0e4e3607921598768a3ab8ccdc8' }
frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/purestake/substrate.git', rev = 'c881b9c86df5d0e4e3607921598768a3ab8ccdc8' }
pallet-proxy = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/purestake/substrate.git', rev = 'c881b9c86df5d0e4e3607921598768a3ab8ccdc8' }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/purestake/substrate.git', rev = 'c881b9c86df5d0e4e3607921598768a3ab8ccdc8' }
orml-traits = { version = "0.4.1-dev", default-features = false, path = "../orml-traits" }
orml-nft = { version = "0.4.1-dev", default-features = false, path = "../orml-nft" }
nftmart-traits = { default-features = false, path = "../nftmart-traits" }
nftmart-order = { default-features = false, path = "../nftmart-order" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
sp-io = { version = "4.0.0-dev", git = 'https://github.com/purestake/substrate.git', rev = 'c881b9c86df5d0e4e3607921598768a3ab8ccdc8' }
pallet-balances = { version = "4.0.0-dev", git = 'https://github.com/purestake/substrate.git', rev = 'c881b9c86df5d0e4e3607921598768a3ab8ccdc8' }
pallet-utility = { version = "4.0.0-dev", git = 'https://github.com/purestake/substrate.git', rev = 'c881b9c86df5d0e4e3607921598768a3ab8ccdc8' }
orml-currencies = { version = "0.4.1-dev", path = "../orml-currencies" }
orml-tokens = { version = "0.4.1-dev", path = "../orml-tokens" }
nftmart-config = { path = "../nftmart-config" }
nftmart-nft = { path = "../nftmart-nft" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-proxy/std",
	"pallet-timestamp/std",
	"orml-traits/std",
	"orml-nft/std",
	"nftmart-traits/std",
	"nftmart-order/std",
	"scale-info/std",
]
