[package]
name = "nftmart-traits"
version = "3.0.0"
authors = ["NFTMart Developers"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-std = { default-features = false, git = 'https://github.com/purestake/substrate.git', rev = '3a5aa8c1a48b015b12e2419fa76b2e2530b3ac75' }
sp-core = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/purestake/substrate.git', rev = '3a5aa8c1a48b015b12e2419fa76b2e2530b3ac75' }
frame-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/purestake/substrate.git', rev = '3a5aa8c1a48b015b12e2419fa76b2e2530b3ac75' }
enumflags2 = { version = "0.6.3" }
orml-traits = { default-features = false, path = "../orml-traits" }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/purestake/substrate.git', rev = '3a5aa8c1a48b015b12e2419fa76b2e2530b3ac75' }
contract-types = { path = "contract-types", default-features = false }
log = { version = "0.4.14", default-features = false }
smallvec = "1.6.1"
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

[features]
default = ['std']
std = [
	"serde",
	"log/std",
	"codec/std",
	"sp-core/std",
	'sp-std/std',
    'frame-support/std',
	"enumflags2/serde",
	"orml-traits/std",
	"sp-runtime/std",
	"contract-types/std",
	"scale-info/std",
]

