[lib]
path = "lib.rs"

[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'Substrate FRAME pallet template for defining custom runtime logic.'
edition = '2021'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-nop'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '4.0.0-dev'
readme = 'README.md'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { default-features = false, version = "4.0.0-dev", git = 'https://github.com/purestake/substrate.git', branch = 'moonbeam-polkadot-v0.9.13' }
frame-system = { default-features = false,  version = "4.0.0-dev",  git = 'https://github.com/purestake/substrate.git', branch = 'moonbeam-polkadot-v0.9.13' }
frame-benchmarking = { default-features = false,  version = "4.0.0-dev",  git = 'https://github.com/purestake/substrate.git', branch = 'moonbeam-polkadot-v0.9.13', optional = true }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
log = { default-features = false, version = "0.4" }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { version = "4.0.0-dev", git = 'https://github.com/purestake/substrate.git', branch = 'moonbeam-polkadot-v0.9.13' }
sp-io = { version = "4.0.0-dev", git = 'https://github.com/purestake/substrate.git', branch = 'moonbeam-polkadot-v0.9.13' }
sp-runtime = { version = "4.0.0-dev", git = 'https://github.com/purestake/substrate.git', branch = 'moonbeam-polkadot-v0.9.13' }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
    'log/std',
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
