[package]
name = "orml-currencies"
description = "Provide `MultiCurrency` implementation using `pallet-balances` and `orml-tokens` module."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/currencies"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.111", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sp-io = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
sp-std = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }

frame-support = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
frame-system = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }

orml-traits = { path = "../orml-traits", version = "0.4.1-dev", default-features = false }
orml-utilities = { path = "../orml-utilities", version = "0.4.1-dev", default-features = false }

funty = { version = "=1.1.0", default-features = false } # https://github.com/bitvecto-rs/bitvec/issues/105

max-encoded-len = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7', features = [ "derive" ] }

[dev-dependencies]
sp-core = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
pallet-balances = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = 'df1165d7' }
orml_tokens = { version = "0.4.1-dev", package = "orml-tokens", path = "../orml-tokens" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"max-encoded-len/std",
	"orml-traits/std",
	"orml-utilities/std",
]
